--- a/styles/styles.css
+++ b/styles/styles.css
@@ -44,7 +44,7 @@
     max-width: 1536px;
     width: 100%;
     padding: 115.5px 120px 179.5px 120px;
-    background-image: url('/assets/hero-bg.png');
+    background-image: url('./assets/hero-bg.png');
 }
 .early{
     width: 229px;
